[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TopPanel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 40.0

[node name="FileMenu" type="MenuButton" parent="TopPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 30.0
toggle_mode = false
text = "File"

[node name="CreateMenu" type="MenuButton" parent="TopPanel"]
margin_left = 60.0
margin_top = 10.0
margin_right = 113.0
margin_bottom = 30.0
toggle_mode = false
text = "Create"

[node name="ViewMenu" type="MenuButton" parent="TopPanel"]
margin_left = 130.0
margin_top = 10.0
margin_right = 172.0
margin_bottom = 30.0
toggle_mode = false
text = "View"

[node name="FPSLabel" type="Label" parent="TopPanel"]
margin_left = 1220.0
margin_top = 14.0
margin_right = 1260.0
margin_bottom = 28.0
text = "FPS: 0"

[node name="BottomPanel" type="Panel" parent="."]
margin_top = 730.0
margin_right = 1280.0
margin_bottom = 770.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 100.0
margin_top = 140.0
margin_right = 610.0
margin_bottom = 470.0
resizable = true
access = 2
current_dir = "/projects/godot/godot-unofficial-demo-projects-v3/modeller"
current_path = "/projects/godot/godot-unofficial-demo-projects-v3/modeller/"

[node name="ProjectPanel" type="Panel" parent="."]
margin_top = 50.0
margin_right = 220.0
margin_bottom = 720.0

[node name="VSplitContainer" type="VSplitContainer" parent="ProjectPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 650.0
split_offset = 300

[node name="ProjectTree" type="Tree" parent="ProjectPanel/VSplitContainer"]
margin_right = 200.0
margin_bottom = 301.0

[node name="PaletteList" type="ItemList" parent="ProjectPanel/VSplitContainer"]
margin_top = 313.0
margin_right = 200.0
margin_bottom = 640.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62166, 4.96137 )

[node name="Spatial" type="Spatial" parent="."]
